--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -1,5 +1,7 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.example.voice_assistant">
+    <user-permission android:name="amdroid.permission.RECORD_AUDIO"/>
+    <user-permission android:name="amdroid.permission.RECORD_INTERNET"/>
    <application
         android:label="voice_assistant"
         android:name="${applicationName}"
